# wsc-stopdash

./: Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  setup.cfg
.github/workflows/: docker-publish.yml  pylint.yml
src/wsc_stopdash/: __init__.py  __main__.py  stopdash.py
src/wsc_stopdash/templates/: index.html.j2  stopdash.html.j2  stops.html.j2
